<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description_success">The Project 3 repository is downloaded</string>
    <string name="notification_description_error">Error to downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_button_success">Success</string>
    <string name="notification_button_fail">Fail</string>
    <string name="notification_channel_name" translatable="true">Downloads</string>
    <string name="notification_channel_description" translatable="false">Downloads of the LoadApp</string>
    <string name="notification_check_the_status">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_download">Glide - Image loading library by BumpTech</string>
    <string name="loadApp_download">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
    <string name="button_details_screen">Ok</string>
    <string name="toast_message_selected_file">Please select the file to download</string>
</resources>
